add 查询所有图片名称 url 's API
